2 nav bars competed

--- a/Skrill.html
+++ b/Skrill.html
@@ -159,6 +159,7 @@
                     <li><a href="#">Exclusive Offers</a></li>
                     <li><a href="#" id="login">Login</a></li>
                     <li><a href="#" id="register">Register</a></li>
+                    <li><a href="#" id="register">Register</a></li>
                     
                     
                 </ul>
