--- a/Skrill.html
+++ b/Skrill.html
@@ -69,7 +69,7 @@
             font-weight: normal;
             font-size: 0.83em;
             text-transform: uppercase;
-            letter-spacing: 1.2px;
+            letter-spacing: 1.4px;
 
         }
 
@@ -109,18 +109,29 @@
             padding-top: 8px;
 
         }
-        #second-list-right{
-            float: right
+
+        #second-list-right {
+            float: right;
+            margin-right: 15px;
         }
-        #second-list-right a{
+
+        #second-list-right a {
             color: #48515F;
             font-size: 1.0em;
         }
-        #second-list-right li{
+
+        #second-list-right li {
             padding-top: 8px;
+            padding: 7px
         }
-        #second-list-right #login, #second-list-right #register{
-             font-size: 0.8em;
+
+        #second-list-right #login,
+        #second-list-right #register {
+            font-size: 0.85em;
+
+            border: 1px solid #48515F;
+            padding: 5px 15px;
+            border-radius: 3px;
         }
 
     </style>
@@ -159,9 +170,8 @@
                     <li><a href="#">Exclusive Offers</a></li>
                     <li><a href="#" id="login">Login</a></li>
                     <li><a href="#" id="register">Register</a></li>
-                    <li><a href="#" id="register">Register</a></li>
-                    
-                    
+
+
                 </ul>
             </nav>
 
